package at.acfhcampus.stud.team_garbagecan.Ordner_Upgrades;

public class Müllabfuhr extends Upgrades {                                                                         //erstellung des Upgrades mit den richtigen Variablen
    public Müllabfuhr() {
        super(0,0,250,"Müllabfuhr", "/at/acfhcampus/stud/team_garbagecan/shopping-cart.png");
    }
}
