package at.acfhcampus.stud.team_garbagecan.Upgradess;

public class Müllverbrennung extends Upgrades {
    public Müllverbrennung() {
        super(50, 1, 30, "Müllverbrennung");
    }
}
